...
                    <view key="view" contentMode="scaleToFill" id="sLs-OL-jhk">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahI-h3-Ltj">
                                <rect key="frame" x="114.5" y="430.5" width="185" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="memberPageButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Member Page Button"/>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="0N4-7E-b5K"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
